Added photos and remaining pages to web dev folder

--- a/about.html
+++ b/about.html
@@ -109,12 +109,10 @@
 </nav>
 <div class="top-line-title" id="about"></div>
 <div class="title">
-  <h1 class="title">About me</h1>
+  <h1 class="title">Our team</h1>
 </div>
-<div class="bottom-line-title"></div>
 <div class="container-fluid ">
   <div class="about-box">
-    <h2 class="bio-title">Who am I?</h2>
     <div class="row mt-2 mb-1 h-100">
       <div class="col-md-5  ">
         <div class="bio-container">
@@ -126,28 +124,24 @@
           French born engineer turned visual designer and front end developer who's happy to call New Zealand home.</p>
         <p class="bio mb-1">
           I am passionate about design and digital technologies; I love to know how things work (hello engineering
-          brain!) but
-          also make things functional for users and pleasing to the eye (hello creative brain!). Being able to combine
-          these two
-          sides of my brain has been a revelation and encouraged me to start Creafix Design.
+          brain!) but also make things functional for users and pleasing to the eye (hello creative brain!). Being able to combine
+          these two sides of my brain has been a revelation and encouraged me to start Creafix Design.
           The desire to help businesses create media that helps promote brands, products and information to their
-          customers is the
-          foundation or "raison de vivre" of Creafix Design.😃</p><br />
+          customers is the foundation or "raison de vivre" of Creafix Design.😃
+        <br/>
+          To acheive this, I associate with a trusted team of creative contractors such as Copywriters or Social Media Managers that provides support when needed to create the best bespoke solution for your business.
+        </p><br />
         <p class="bio mb-1">
           I have been working as a product designer for a number of years, focusing heavily on analysing problems and
-          identifying
-          users needs.
+          identifying users needs.
           This is the reason why I love getting to know my clients personally and being part of their projects or
-          business ideas
-          as I believe it is the key to identifying the essence of their business and reaching out to their ideal
+          business ideas as I believe it is the key to identifying the essence of their business and reaching out to their ideal
           audience.
         </p> <br />
         <p class="bio mb-1">
           I'm happiest when I'm creating, learning, exploring and thinking about how to make things better. Currently, I
-          am
-          available to take on new freelance work, feel free to reach out and say hello even if you haven't got a
-          project in mind
-          yet!
+          am available to take on new work, feel free to reach out and say hello even if you haven't got a
+          project in mind yet!
         </p><br />
         <p class="bio mb-1">
           I can help with creating beautiful functional websites, eye catching branding and graphics. Click below to
@@ -172,12 +166,12 @@
 </div>
 <div class="accordion-item-body">
   <div class="accordion-item-body-content">
-I design static and dynamic websites depending on requirements.<br/>
+We design static and dynamic websites depending on requirements.<br/>
  This service includes recommendation on whether a fully coded customised website is required or use of a CMS
   platform is more suitable.
-  I'll take you through the entire process from creating the layout via wireframes to registering your domain, hosting
+  We take you through the entire process from creating the layout via wireframes to registering your domain, hosting
   and publishing your website for the world to see.
-  I pay particular attention to optimising my designs for basic SEO, and I include strong considerations to the user
+  We pay particular attention to optimising my designs for basic SEO, and we include strong considerations to the user
   interface and experience (UI/UX).
 
 <div class="tools">
@@ -287,9 +281,9 @@ I design static and dynamic websites depending on requirements.<br/>
   </div>
   <div class="accordion-item-body">
     <div class="accordion-item-body-content">
-    I provide graphic design support by creating logo, branding and colour palette to put together a brand identity that best represents you.
-    I provide the branding guidelines along with business cards design or letterheads if needed. I also create catalogues, brochures/leaflets, flyers/posters to promote your business.
-    I can help you create graphics for prints or web use as well as infographics to suit your needs.
+    We provide graphic design support by creating logo, branding and colour palette to put together a brand identity that best represents you.
+    We provide the branding guidelines along with business cards design or letterheads if needed. We also create catalogues, brochures/leaflets, flyers/posters to promote your business.
+    We can help you create graphics for prints or web use as well as infographics to suit your needs.
     
   <div class="tools">
     <h5> Skills & Tools</h5>
@@ -354,7 +348,7 @@ I design static and dynamic websites depending on requirements.<br/>
     </div>
     <div class="accordion-item-body">
       <div class="accordion-item-body-content">
-      I am confident using several social media platforms, creating content strategies and managing paid advertisement.
+      We are confident using several social media platforms, creating content strategies and managing paid advertisement.
       <div class="tools">
         <h5> Skills & Tools</h5>
         <div class="row">
@@ -396,8 +390,8 @@ I design static and dynamic websites depending on requirements.<br/>
   </div>
   <div class="accordion-item-body">
     <div class="accordion-item-body-content">
-   I can also help with creating simple motion graphics, packaging design and photo editing. 
-   Get in touch with your requirements to discuss how I can help.
+   We can also help with creating simple motion graphics, packaging design and photo editing. 
+   Get in touch with your requirements to discuss how we can help.
   </div>
     </div>
   </div>
@@ -405,7 +399,7 @@ I design static and dynamic websites depending on requirements.<br/>
 
 <div class="row mt-2 g-0">
   <div class="col-12  contact-button">
-    <a href="index.html#contact" class="contact-link" title="Contact me">Work with me</a>
+    <a href="index.html#contact" class="contact-link" title="Contact me">Work with us</a>
   </div>
 </div>
 
