--- a/digital_marketing/emailmarketing.html
+++ b/digital_marketing/emailmarketing.html
@@ -115,8 +115,8 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <img src="./../images/marteking strategy.jpg"
-          alt="Top view of desk with marketing strategy written on piece of paper" class="service-image">
+        <img src="./../images/Emailmarketing.png"
+          alt="Gmail inbox with unread emails" class="service-image">
       </div>
       <div class="col">
         <p class=" mb-1">Email marketing leverages the contact details of your existing customers, or prospects that have signed up to your
