--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ you reach your goals while you stay free to focus on what you do best.</p>
 
 
 <div class="top-line-title" id="work"></div>
-<div class="title" > <h1 class="title">What I do</h1></div>
+<div class="title" > <h1 class="title">What we do</h1></div>
 <div class="container intro-services">
   <div class="row">
     <div class="col-1"><a href="/creative_services/logodesign.html"><img src="./../images/Creativeicon.png"
@@ -168,7 +168,7 @@ you reach your goals while you stay free to focus on what you do best.</p>
 </div>
 <div class="top-line-title" id="work"></div>
 <div class="title">
-  <h1 class="title">Who am I</h1>
+  <h1 class="title">Who are we</h1>
 </div>
 <div class="container">
   <div class="row">
@@ -176,21 +176,21 @@ you reach your goals while you stay free to focus on what you do best.</p>
       <img src="./images/Mascot who am I.PNG" alt="Creafix Mascot who am I" class="img-fluid mx-auto d-block mascot">
     </div>
     <div class="col-7">
-      <p class="bio">Creafix Design is a digital freelance agency run by me, Audrey! I am based in Christchurch, New Zealand and operate
-      nationwide. For the last few years, I have worked with businesses around the Canterbury region across a range of
-      industries. I work with small and medium businesses make the most of their digital presence to help them thrive. I am an
-      expert at building brand and digital marketing strategies alongside developing websites to convert your online visitors
+      <p class="bio">Creafix Design is a digital freelance agency directed by me, Audrey! I am based in Christchurch, New Zealand and operate
+      nationwide. For the last few years, we have worked with businesses around the Canterbury region across a range of
+      industries. We work with small and medium businesses make the most of their digital presence to help them thrive. We are
+      experts at building brand and digital marketing strategies alongside developing websites to convert your online visitors
       into customers.<br>
-      I take time to get to know each business I work with to understand what make them who they are and what challenges they
-      are facing. This helps me provide the best bespoke solutions for each unique business. This flexibility also means that
-      I can take over your digital marketing completely on an on-going basis or simply land a hand when needed for a one-off
+      We take time to get to know each business we work with to understand what make them who they are and what challenges they
+      are facing. This helps us provide the best bespoke solutions for each unique business. This flexibility also means that
+      we can take over your digital marketing completely on an on-going basis or simply land a hand when needed for a one-off
       project.<br>
-      As a former engineer, it's probably no surprise that I like problem solving and efficient design. This is why I apply
+      As a former engineer, it's probably no surprise that I like problem solving and efficient design. This is why we apply
       the KISS (acronym for "Keep It Simple, Stupid") principle which helps prioritising tasks and implement projects more
-      efficiently. This helps my customers save time and money but also provides transparency to helps them understand what I
-      am doing for them.</p>
+      efficiently. This helps our customers save time and money but also provides transparency to helps them understand what we
+      are doing for them.</p>
       <div class="contact-button">
-        <a href="about.html" class="contact-link" title="Learn more about me">Learn more about me</a>
+        <a href="about.html" class="contact-link" title="Learn more about me">Learn more about us</a>
       </div>
            </div>
        
@@ -198,7 +198,7 @@ you reach your goals while you stay free to focus on what you do best.</p>
   </div>
 <div class="top-line-title" id="work"></div>
 <div class="title">
-  <h1 class="title">Why work with me</h1>
+  <h1 class="title">Why work with us</h1>
 </div>
 <div class="container">
   <div class="row">
@@ -208,17 +208,17 @@ you reach your goals while you stay free to focus on what you do best.</p>
     <div class="col-7">
       <p class="bio">Whether you've been in business for 2 or 20 years, you need visual communication and strategy that will make you reach
       your ideal customers better and drive them to purchase your offering.<br/>
-      To keep the process simple, I like to start by reviewing the situation of your business and understand your goals and
+      To keep the process simple, we like to start by reviewing the situation of your business and understand your goals and
       the challenges you may have. This allows us to work side by side to identify the potential areas of improvement to
       deliver the best action plan for maximising the effect of your digital tools.</p>
       <ul>
         <li class="bio-list">◼ One stop shop for a complete offer: all the services you need to maximise your digital marketing reach. You only have
-      one person to deal with, and one bill to pay. This saves you time coordinating several contractors and reduces the risks
+      one agency to deal with, and one bill to pay. This saves you time coordinating several contractors and reduces the risks
       of miscommunication for the implementation of the strategy.</li>
-        <li class="bio-list"> ◼ Keep it simple: Running a business requires a lot of brain power and time; that's why I like to keep things as
+        <li class="bio-list"> ◼ Keep it simple: Running a business requires a lot of brain power and time; that's why we like to keep things as
       straightforward as possible so that you can stay in the loop and understand what we are working on without having the
       become an expert on the subject.</li>
-        <li class="bio-list">◼ Bespoke solutions for unique businesses: No two businesses are the same, that's why I spend the time to understand
+        <li class="bio-list">◼ Bespoke solutions for unique businesses: No two businesses are the same, that's why we spend the time to understand
       your objectives and bring you solutions that are specific to your situation.</li>
  
     </ul>
