--- a/web_development/landingpages.html
+++ b/web_development/landingpages.html
@@ -52,68 +52,131 @@
 </head>
 
 <body>
-<nav>
-  <ul class="menu" id="navbar">
-    <li class="logo"> <a href="index.html" title="Homepage logo"><img src="/images/Creafix logo white simple.png"
-          alt="creafix design logo" width="150" /></a></li>
-    <li class="item"> <a href="./../index.html" title="Homepage">Home</a></li>
+  <nav>
+    <ul class="menu" id="navbar">
+      <li class="logo"> <a href="index.html" title="Homepage logo"><img src="/images/Creafix logo white simple.png"
+            alt="creafix design logo" width="150" /></a></li>
+      <li class="item"> <a href="./../index.html" title="Homepage">Home</a></li>
 
-    <li class="nav-item dropdown item">
-      <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-        aria-expanded="false">
-        Creative Services
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="./../creative_services/brandstrategy.html">Branding Strategy</a></li>
-        <li><a class="dropdown-item" href="./../creative_services/logodesign.html">Logo Design</a></li>
-        <li><a class="dropdown-item" href="./../creative_services/marketingcollateral.html">Marketing material and
-            collateral</a></li>
-        <li><a class="dropdown-item" href="./../creative_services/templates.html">Presentation and proposal template</a>
-        </li>
-      </ul>
-    </li>
-    <li class="nav-item dropdown item">
-      <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-        aria-expanded="false">
-        Digital Marketing
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="./../digital_marketing/digitalstrategy.html">Digital Marketing Strategy</a>
-        </li>
-        <li><a class="dropdown-item" href="./../digital_marketing/smmanagement.html">Social Media Management</a></li>
-        <li><a class="dropdown-item" href="./../digital_marketing/websitemarketing.html">Website Marketing</a>
-        </li>
-        <li><a class="dropdown-item" href="./../digital_marketing/emailmarketing.html">Email Marketing</a></li>
-      </ul>
-    </li>
-    <li class="nav-item dropdown item">
-      <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-        aria-expanded="false">
-        Web Development
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="./../web_development/webdesign.html">Web Design</a></li>
-        <li><a class="dropdown-item" href="./../web_development/seo.html">Search Engine Optimisation (SEO)</a></li>
-        <li><a class="dropdown-item" href="./../web_development/landingpages.html">Landing Pages</a>
-        </li>
-        <li><a class="dropdown-item" href="./../web_development/websiteaudit.html">Website Audit</a></li>
-      </ul>
-    </li>
-    <li class="item"> <a href="./../mywork.html" title="My Work">Work</a></li>
-    <li class="item"> <a href="./../about.html" title="About">About</a></li>
-    <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
-    <li class="toggle"> <span class="bars"></span></li>
+      <li class="nav-item dropdown item">
+        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+          aria-expanded="false">
+          Creative Services
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li><a class="dropdown-item" href="./../creative_services/brandstrategy.html">Branding Strategy</a></li>
+          <li><a class="dropdown-item" href="./../creative_services/logodesign.html">Logo Design</a></li>
+          <li><a class="dropdown-item" href="./../creative_services/marketingcollateral.html">Marketing material and
+              collateral</a></li>
+          <li><a class="dropdown-item" href="./../creative_services/templates.html">Presentation and proposal
+              template</a>
+          </li>
+        </ul>
+      </li>
+      <li class="nav-item dropdown item">
+        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+          aria-expanded="false">
+          Digital Marketing
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li><a class="dropdown-item" href="./../digital_marketing/digitalstrategy.html">Digital Marketing Strategy</a>
+          </li>
+          <li><a class="dropdown-item" href="./../digital_marketing/smmanagement.html">Social Media Management</a></li>
+          <li><a class="dropdown-item" href="./../digital_marketing/websitemarketing.html">Website Marketing</a>
+          </li>
+          <li><a class="dropdown-item" href="./../digital_marketing/emailmarketing.html">Email Marketing</a></li>
+        </ul>
+      </li>
+      <li class="nav-item dropdown item">
+        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+          aria-expanded="false">
+          Web Development
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li><a class="dropdown-item" href="./../web_development/webdesign.html">Web Design</a></li>
+          <li><a class="dropdown-item" href="./../web_development/seo.html">Search Engine Optimisation (SEO)</a></li>
+          <li><a class="dropdown-item" href="./../web_development/landingpages.html">Landing Pages</a>
+          </li>
+          <li><a class="dropdown-item" href="./../web_development/websiteaudit.html">Website Audit</a></li>
+        </ul>
+      </li>
+      <li class="item"> <a href="./../mywork.html" title="My Work">Work</a></li>
+      <li class="item"> <a href="./../about.html" title="About">About</a></li>
+      <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
+      <li class="toggle"> <span class="bars"></span></li>
 
 
-  </ul>
-</nav>
+    </ul>
+  </nav>
 
-  <div class="top-line-title" id="about"></div>
   <div class="title">
-    <h1 class="title">Projects</h1>
+    <h1 class="title">Landing Page Design</h1>
   </div>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <img src="../images/Landingpage.PNG" alt="Example of landing page presented on a laptop screen" class="service-image">
+      </div>
+      <div class="col">
+        <p class=" mb-1">Landing pages are common stand-alone pages used in digital marketing where visitors "land" after they click on a link.
+        This type of webpages typically has a single objective, make the visitor complete the call to action. Focusing on one
+        goal makes this type of pages the best tool to increase conversion rates of your marketing campaigns. We design landing
+        pages layouts that suit your marketing objectives.
+
+
+          </br>
+          We can help you with:
+        </p>
+        <p class=" mb-1">
+        <ul>
+          <li>◼ Design different landing pages depending on your objective</li>
+          <li>◼ Tailor landing pages to your digital marketing strategy</li>
+          <li>◼ Design the funnel sequence of landing page to achieve sale conversion</li>
+          <li>◼ Integration of your landing pages with main marketing tools available</li>
+        </ul>
+
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="container creative-services">
+    <div class="row">
+      <div class="col"><a href="/web_development/webdesign.html"><img src="../images/WebDevicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"><a href="/web_development/webdesign.html">Web design & development</a></div>
+      <div class="col"><a href="/web_development/seo.html"><img src="../images/WebDevicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"> <a href="/web_development/seo.html">Search Engine Optimisation (SEO)</a></div>
+      <div class="col"><a href="/web_development/landingpages.html"><img src="../images/WebDevicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"><a href="/web_development/landingpages.html">Landing pages</a></div>
+      <div class="col"><a href="/web_development/websiteaudit.html"><img src="../images/WebDevicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"><a href="/web_development/websiteaudit.html">Website performance audit</a></div>
+    </div>
+  </div>
+
+
 </body>
 <footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-1">
+        <img src="../images/Icon%20small-min.png" alt="Creafix Design icon" class="">
+      </div>
+      <div class="col-11 email-footer">
+        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
+        Christchurch, New Zealand
+      </div>
+    </div>
+
+
+  </div>
+  <div id="terms">
+    © 2022 by Creafix Design All Rights Reserved. | <a href="#">Privacy Policy</a> | <a href="#">Website Terms of
+      Use</a>
+  </div>
 
 
 </footer>
