--- a/web_development/websiteaudit.html
+++ b/web_development/websiteaudit.html
@@ -57,7 +57,7 @@
       <li class="logo"> <a href="index.html" title="Homepage logo"><img src="/images/Creafix logo white simple.png"
             alt="creafix design logo" width="150" /></a></li>
       <li class="item"> <a href="./../index.html" title="Homepage">Home</a></li>
-  
+
       <li class="nav-item dropdown item">
         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
           aria-expanded="false">
@@ -68,7 +68,8 @@
           <li><a class="dropdown-item" href="./../creative_services/logodesign.html">Logo Design</a></li>
           <li><a class="dropdown-item" href="./../creative_services/marketingcollateral.html">Marketing material and
               collateral</a></li>
-          <li><a class="dropdown-item" href="./../creative_services/templates.html">Presentation and proposal template</a>
+          <li><a class="dropdown-item" href="./../creative_services/templates.html">Presentation and proposal
+              template</a>
           </li>
         </ul>
       </li>
@@ -103,17 +104,76 @@
       <li class="item"> <a href="./../about.html" title="About">About</a></li>
       <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
       <li class="toggle"> <span class="bars"></span></li>
-  
-  
+
+
     </ul>
   </nav>
 
-  <div class="top-line-title" id="about"></div>
   <div class="title">
-    <h1 class="title">Projects</h1>
+    <h1 class="title">Website performance audit</h1>
   </div>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <img src="../images/webaudit.png" alt="Graph presented on dashboard showing website parameters"
+          class="service-image">
+      </div>
+      <div class="col">
+        <p class=" mb-1">Carrying out a performance test on your website allows you to identify the weakest points that might impact the
+        performance and/or the user experience. This is a great tool to help identify the areas of the website that needs
+        optimising to increase your engagement and overall SEO ranking.
+          </br>
+          We can help you with:
+        </p>
+        <p class=" mb-1">
+        <ul>
+          <li>◼ Complete website audit</li>
+          <li>◼ SEO ranking audit</li>
+          <li>◼ Create a plan to correct the areas of weaknesses</li>
+        </ul>
+
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="container creative-services">
+    <div class="row">
+      <div class="col"><a href="/web_development/webdesign.html"><img src="../images/WebDevicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"><a href="/web_development/webdesign.html">Web design & development</a></div>
+      <div class="col"><a href="/web_development/seo.html"><img src="../images/WebDevicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"> <a href="/web_development/seo.html">Search Engine Optimisation (SEO)</a></div>
+      <div class="col"><a href="/web_development/landingpages.html"><img src="../images/WebDevicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"><a href="/web_development/landingpages.html">Landing pages</a></div>
+      <div class="col"><a href="/web_development/websiteaudit.html"><img src="../images/WebDevicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"><a href="/web_development/websiteaudit.html">Website performance audit</a></div>
+    </div>
+  </div>
+
+
 </body>
 <footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-1">
+        <img src="../images/Icon%20small-min.png" alt="Creafix Design icon" class="">
+      </div>
+      <div class="col-11 email-footer">
+        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
+        Christchurch, New Zealand
+      </div>
+    </div>
+
+
+  </div>
+  <div id="terms">
+    © 2022 by Creafix Design All Rights Reserved. | <a href="#">Privacy Policy</a> | <a href="#">Website Terms of
+      Use</a>
+  </div>
 
 
 </footer>
