--- a/digital_marketing/websitemarketing.html
+++ b/digital_marketing/websitemarketing.html
@@ -114,7 +114,7 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <img src="../images/Audience.png" alt="Word audience written on whiteboard" class="service-image">
+        <img src="../images/webmarketing.png" alt="Example of webpage presented on a laptop screen placed on a wooden table" class="service-image">
       </div>
       <div class="col">
         <p class=" mb-1">With website marketing you are leveraging you website as a tool to promote your products or offers. To bring more
