--- a/web_development/seo.html
+++ b/web_development/seo.html
@@ -115,37 +115,27 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <img src="../images/" alt="Word audience written on whiteboard" class="service-image">
+        <img src="../images/seo.PNG" alt="Phone screen with google search page" class="service-image">
       </div>
       <div class="col">
-        <p class=" mb-1">Not all business websites require the use of complex features or design. We carry out an audit
-          of where you are
-          currently and where you're wanted to be in the short to long term to make a recommendation on the most
-          suitable option
-          for your situation. We offer services ranging for fully custom coded websites to CMS build websites on Wix,
-          SquareSpace
-          or Shopify for example. We take you through the entire process from creating the layout via wireframes to
-          registering
-          your domain, hosting and publishing your website for the world to see. All webpages are optimised for best SEO
-          ranking
-          making it easier for your customers to find you.
+        <p class=" mb-1">Search Engine optimisation or SEO is the process used to increase and improve the quality of the unpaid traffic coming
+        to a website. The higher a website ranks on Google for a keyword, the more relevant and abundant the website traffic
+        will be, therefore increasing your chances of sales conversion.
+        SEO is an ongoing process that requires monitoring and adjusting on a regular basis to keep you ranking as high as
+        possible on the Google search pages. We can help you create the strategy to get your website visible and report on key
+        ranking parameters to adjust the strategy.
+
 
           </br>
           We can help you with:
         </p>
         <p class=" mb-1">
         <ul>
-          <li>◼ Custom code</li>
-          <li>◼ WordPress</li>
-          <li>◼ Wix</li>
-          <li>◼ Squarespace</li>
-          <li>◼ Shopify</li>
-          <li>◼ UI/UX design</li>
-          <li>◼ Website architecture</li>
-          <li>◼ Sitemaps</li>
-          <li>◼ Domain name registration</li>
-          <li>◼ Webhosting</li>
-          <li>◼ Web page maintenance and updates</li>
+          <li>◼ Webpage design and content optimisation for Google ranking</li>
+          <li>◼ Google analytics monitoring and reporting</li>
+          <li>◼ Keyword selection and implementation</li>
+          <li>◼ SEO strategy</li>
+          <li>◼ SEO audits</li>
         </ul>
 
         </p>
@@ -166,7 +156,7 @@
       <div class="col"><a href="/web_development/landingpages.html">Landing pages</a></div>
       <div class="col"><a href="/web_development/websiteaudit.html"><img src="../images/WebDevicon.png"
             alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/web_development/websiteaudit.html">Website performance assessment</a></div>
+      <div class="col"><a href="/web_development/websiteaudit.html">Website performance audit</a></div>
     </div>
   </div>
 
