--- a/web_development/webdesign.html
+++ b/web_development/webdesign.html
@@ -114,7 +114,7 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <img src="../images/Audience.png" alt="Word audience written on whiteboard" class="service-image">
+        <img src="../images/coding.png" alt="laptop screen with lines of codes on dark background" class="service-image">
       </div>
       <div class="col">
         <p class=" mb-1">Not all business websites require the use of complex features or design. We carry out an audit of where you are
@@ -160,7 +160,7 @@
       <div class="col"><a href="/web_development/landingpages.html">Landing pages</a></div>
       <div class="col"><a href="/web_development/websiteaudit.html"><img src="../images/WebDevicon.png"
             alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/web_development/websiteaudit.html">Website performance assessment</a></div>
+      <div class="col"><a href="/web_development/websiteaudit.html">Website performance audit</a></div>
     </div>
   </div>
   
